--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name"        : "atom-null-syntax",
+    "name"        : "null-syntax",
     "theme"       : "syntax",
-    "version"     : "0.1.0",
+    "version"     : "0.2.0",
     "description" : "A dark content-focused systax theme",
     "keywords"    : [
         "dark", "syntax"
