--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "name"        : "null-syntax",
     "theme"       : "syntax",
-    "version"     : "0.2.1",
+    "version"     : "0.2.2",
+    "author"      : "nfour",
+    "repository"  : "https://github.com/nfour/atom-null-syntax",
     "description" : "A dark content-focused systax theme",
     "keywords"    : [
         "dark", "syntax"
