--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-    "name"        : "null-syntax",
-    "theme"       : "syntax",
-    "version"     : "0.3.1",
-    "author"      : "nfour",
-    "repository"  : "https://github.com/nfour/atom-null-syntax.git",
-    "description" : "A dark content-focused systax theme",
-    "keywords"    : [
-        "dark", "syntax"
-    ],
-    "license" : "GNU",
-    "engines" : {
-        "atom": ">=1.0.0"
-    }
-
+  "name": "null-syntax",
+  "theme": "syntax",
+  "version": "1.0.0",
+  "author": "nfour",
+  "repository": "https://github.com/nfour/atom-null-syntax.git",
+  "description": "A dark content-focused systax theme",
+  "keywords": [
+    "dark",
+    "syntax"
+  ],
+  "license": "GNU",
+  "engines": {
+    "atom": ">=1.0.0"
+  }
 }
